# wava

./: .gitignore  NOTES  README.md  a.db  pom.xml
attic/: POSIXUtils.java  dar.c  hax  hax.py  notclang.cpp  notclang.dylib  test_indy  test_indy.cpp
attic/driver/: Driver.java  Pass.java  PassContextScope.java  PassInput.java  PassOutput.java  PassScope.java  PassScoped.java  PassType.java  Passes.java
attic/lljvm/: .gitignore  CMakeLists.txt
attic/lljvm-demo/: Main.java  lua.java  luac.java  minigzip.java  morse.java  number.java  pig.java  rdjpgcom.java  wrjpgcom.java
attic/lljvm/backend/: CMakeLists.txt  Makefile
attic/notclang.dylib.dSYM/Contents/: Info.plist
attic/notclang.dylib.dSYM/Contents/Resources/DWARF/: notclang.dylib
attic/tool/: build  tool.cpp
src/test/resources/fib/: fib.bc  fib.c  fib.ll  fib.s  fib.wast
src/test/resources/sqlite/: sqlite3.bc  sqlite3.s
src/work/java/sqlite3/: sqlite3$0.java  sqlite3$1.java  sqlite3$10.java  sqlite3$11.java  sqlite3$12.java  sqlite3$13.java  sqlite3$14.java  sqlite3$15.java  sqlite3$16.java  sqlite3$17.java  sqlite3$18.java  sqlite3$19.java  sqlite3$2.java  sqlite3$20.java  sqlite3$21.java  sqlite3$22.java  sqlite3$3.java  sqlite3$4.java  sqlite3$5.java  sqlite3$6.java  sqlite3$7.java  sqlite3$8.java  sqlite3$9.java  sqlite3.java
src/work/resources/: dump-macros.txt  dump-record-layouts.txt  hello_world.wast  musl.wast  sql-raw.js.mem  sql-raw.mem  sqlite3.bc
src/work/resources/new/: musl.wast  sqlite3.bc  sqlite3.s
src/work/resources/new/O0/: musl.wast
wasm-compiler/: Dockerfile
(+520 files in other folders)
